# permcomb

./: CMakeLists.txt  LICENSE  README.md  example.c  permcomb.c  permcomb.h
