
PROJECT( PERMCOMB C )

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5)

# do not build static version by default  
if( NOT DEFINED PERMCOMB_BUILD_STATIC )
   set (PERMCOMB_BUILD_STATIC OFF CACHE STRING "Build a static version of the PERMCOMB library" FORCE)
endif( NOT DEFINED PERMCOMB_BUILD_STATIC )

# PERMCOMB sources
set( PERMCOMB_SRCS permcomb.c permcomb.h )

IF( PERMCOMB_BUILD_STATIC )
   ADD_LIBRARY( permcomb STATIC ${PERMCOMB_SRCS} ) 
   INSTALL( TARGETS permcomb ARCHIVE DESTINATION LIB ) 
ELSE( PERMCOMB_BUILD_STATIC )
   ADD_LIBRARY( permcomb SHARED ${PERMCOMB_SRCS} ) 
   INSTALL( TARGETS permcomb LIBRARY DESTINATION LIB ) 
ENDIF( PERMCOMB_BUILD_STATIC )

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} )

ADD_EXECUTABLE( example example.c )
TARGET_LINK_LIBRARIES( example permcomb )

